updated web files

--- a/web/create.html
+++ b/web/create.html
@@ -28,251 +28,23 @@
       </div>
     </div> <!-- /container -->
 
-    <div class="container-fluid" style="margin: 0px">
-      <div class="row">
-        <div class="col-md-3">
-          <div id="toolbar">
-            <div class="tool_row">
-              <div class="tool" id="0"></div>
-              <div class="tool" id="1"></div>
-              <div class="tool" id="2"></div>
-              <div class="tool" id="3"></div>
-              <div class="tool" id="4"></div>
-              <div class="tool" id="5"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="6"></div>
-              <div class="tool" id="7"></div>
-              <div class="tool" id="8"></div>
-              <div class="tool" id="9"></div>
-              <div class="tool" id="10"></div>
-              <div class="tool" id="11"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="12"></div>
-              <div class="tool" id="13"></div>
-              <div class="tool" id="14"></div>
-              <div class="tool" id="15"></div>
-              <div class="tool" id="16"></div>
-              <div class="tool" id="17"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="18"></div>
-              <div class="tool" id="19"></div>
-              <div class="tool" id="20"></div>
-              <div class="tool" id="21"></div>
-              <div class="tool" id="22"></div>
-              <div class="tool" id="23"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="24"></div>
-              <div class="tool" id="25"></div>
-              <div class="tool" id="26"></div>
-              <div class="tool" id="27"></div>
-              <div class="tool" id="28"></div>
-              <div class="tool" id="29"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="30"></div>
-              <div class="tool" id="31"></div>
-              <div class="tool" id="32"></div>
-              <div class="tool" id="33"></div>
-              <div class="tool" id="34"></div>
-              <div class="tool" id="35"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="36"></div>
-              <div class="tool" id="37"></div>
-              <div class="tool" id="38"></div>
-              <div class="tool" id="39"></div>
-              <div class="tool" id="40"></div>
-              <div class="tool" id="41"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="42"></div>
-              <div class="tool" id="43"></div>
-              <div class="tool" id="44"></div>
-              <div class="tool" id="45"></div>
-              <div class="tool" id="46"></div>
-              <div class="tool" id="47"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="48"></div>
-              <div class="tool" id="49"></div>
-              <div class="tool" id="50"></div>
-              <div class="tool" id="51"></div>
-              <div class="tool" id="52"></div>
-              <div class="tool" id="53"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="54"></div>
-              <div class="tool" id="55"></div>
-              <div class="tool" id="56"></div>
-              <div class="tool" id="57"></div>
-              <div class="tool" id="58"></div>
-              <div class="tool" id="59"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="60"></div>
-              <div class="tool" id="61"></div>
-              <div class="tool" id="62"></div>
-              <div class="tool" id="63"></div>
-              <div class="tool" id="64"></div>
-              <div class="tool" id="65"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="66"></div>
-              <div class="tool" id="67"></div>
-              <div class="tool" id="68"></div>
-              <div class="tool" id="69"></div>
-              <div class="tool" id="70"></div>
-              <div class="tool" id="71"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="72"></div>
-              <div class="tool" id="73"></div>
-              <div class="tool" id="74"></div>
-              <div class="tool" id="75"></div>
-              <div class="tool" id="76"></div>
-              <div class="tool" id="77"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="78"></div>
-              <div class="tool" id="79"></div>
-              <div class="tool" id="80"></div>
-              <div class="tool" id="81"></div>
-              <div class="tool" id="82"></div>
-              <div class="tool" id="83"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="84"></div>
-              <div class="tool" id="85"></div>
-              <div class="tool" id="86"></div>
-              <div class="tool" id="87"></div>
-              <div class="tool" id="88"></div>
-              <div class="tool" id="89"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="90"></div>
-              <div class="tool" id="91"></div>
-              <div class="tool" id="92"></div>
-              <div class="tool" id="93"></div>
-              <div class="tool" id="94"></div>
-              <div class="tool" id="95"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="96"></div>
-              <div class="tool" id="97"></div>
-              <div class="tool" id="98"></div>
-              <div class="tool" id="99"></div>
-              <div class="tool" id="100"></div>
-              <div class="tool" id="101"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="102"></div>
-              <div class="tool" id="103"></div>
-              <div class="tool" id="104"></div>
-              <div class="tool" id="105"></div>
-              <div class="tool" id="106"></div>
-              <div class="tool" id="107"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="108"></div>
-              <div class="tool" id="109"></div>
-              <div class="tool" id="110"></div>
-              <div class="tool" id="111"></div>
-              <div class="tool" id="112"></div>
-              <div class="tool" id="113"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="114"></div>
-              <div class="tool" id="115"></div>
-              <div class="tool" id="116"></div>
-              <div class="tool" id="117"></div>
-              <div class="tool" id="118"></div>
-              <div class="tool" id="119"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="120"></div>
-              <div class="tool" id="121"></div>
-              <div class="tool" id="122"></div>
-              <div class="tool" id="123"></div>
-              <div class="tool" id="124"></div>
-              <div class="tool" id="125"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="126"></div>
-              <div class="tool" id="127"></div>
-              <div class="tool" id="128"></div>
-              <div class="tool" id="129"></div>
-              <div class="tool" id="130"></div>
-              <div class="tool" id="131"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="132"></div>
-              <div class="tool" id="133"></div>
-              <div class="tool" id="134"></div>
-              <div class="tool" id="135"></div>
-              <div class="tool" id="136"></div>
-              <div class="tool" id="137"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="138"></div>
-              <div class="tool" id="139"></div>
-              <div class="tool" id="140"></div>
-              <div class="tool" id="141"></div>
-              <div class="tool" id="142"></div>
-              <div class="tool" id="143"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="144"></div>
-              <div class="tool" id="145"></div>
-              <div class="tool" id="146"></div>
-              <div class="tool" id="147"></div>
-              <div class="tool" id="148"></div>
-              <div class="tool" id="149"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="150"></div>
-              <div class="tool" id="151"></div>
-              <div class="tool" id="152"></div>
-              <div class="tool" id="153"></div>
-              <div class="tool" id="154"></div>
-              <div class="tool" id="155"></div>
-            </div>
-            <div class="tool_row">
-              <div class="tool" id="156"></div>
-              <div class="tool" id="157"></div>
-              <div class="tool" id="158"></div>
-              <div class="tool" id="159"></div>
-              <div class="tool" id="160"></div>
-              <div class="tool" id="161"></div>
-            </div>
-          </div>
-           <div class="row">
-              <div class="col-md-3">
-                <div id="button"></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-3">
-                <div id="button"></div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-3">
-                <div id="button"></div>
-              </div>
-            </div>
-        </div> <!-- first column -->
-        <div class="col-md-9">
-          <canvas id="cnv"></canvas>
-        </div> <!-- second column -->
+    <div class="container">
+      <h1>CREATE NEW SCHEMATIC</h1>
+      <br><br>      
+      <div style="margin-left: 50px;">
+        <form>
+          <h2>Name</h2>
+          <input type="text" name="name" style="float: left;"></input>
+          <br>
+          <h2>Tags</h2> <p> (separated by commas) </p>
+          <input type="text" name="tags"></input>
+          <br><br><br>
+          <button class="btn">CREATE</button>
+        </form>
       </div>
-    </div> <!-- /container -->
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/minecraft.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
