--- a/web/login.html
+++ b/web/login.html
@@ -32,9 +32,9 @@
 
       <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="email" name="user" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" class="form-control" placeholder="Email address" required autofocus>
         <div style="height: 10px;"></div>
-        <input type="password" name="pass" class="form-control" placeholder="Password" required>
+        <input type="password" class="form-control" placeholder="Password" required>
         <div style="height: 10px;"></div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
