modified web files

--- a/web/profile.html
+++ b/web/profile.html
@@ -24,7 +24,7 @@
               <li class="active"><a href="profile.html">Profile</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">NAME</a></li>
+              <li><a href="#">${user.name}</a></li>
               <li><a href="#">Logout</a></li> 
             </ul>
           </div><!--/.nav-collapse -->
@@ -46,24 +46,24 @@
           </div>
         </c:forEach>
         <div class="result">
-            <h1>${schematic.name}</h1>
-            <p>${schematic.tags}</p>
+            <h1>Test 1</h1>
+            <p>cool, fun, water</p>
         </div>
         <div class="result">
-            <h1>${schematic.name}</h1>
-            <p>${schematic.tags}</p>
+            <h1>Test 2</h1>
+            <p>wow, awesome</p>
         </div>
         <div class="result">
-            <h1>${schematic.name}</h1>
-            <p>${schematic.tags}</p>
+            <h1>Test 3</h1>
+            <p>tag1, tag2, tag3, tag4</p>
         </div>
         <div class="result">
-            <h1>${schematic.name}</h1>
-            <p>${schematic.tags}</p>
+            <h1>Test 4</h1>
+            <p>Tag1, tag2, Tag3</p>
         </div>
         <div class="result">
-            <h1>${schematic.name}</h1>
-            <p>${schematic.tags}</p>
+            <h1>testestest</h1>
+            <p>tag2, tag3</p>
         </div>
       </div>
 
