--- a/web/schematic.html
+++ b/web/schematic.html
@@ -251,16 +251,16 @@
           </div>
            <div class="row">
               <div class="col-md-3">
-                <div class="button" id="new-floor">
-                  <p style="margin-left: 70px;">ADD NEW FLOOR</p>
-                </div>
+                <button method="POST" name="button" value="add" class="button" id="new-floor">
+                  <p>ADD NEW FLOOR</p>
+                </button>
               </div>
             </div>
             <div class="row">
               <div class="col-md-3">
-                <div class="button" id="save">
-                  <p style="margin-left: 123px;">SAVE</p>
-                </div>
+                <button method="POST" name="button" value="save" class="button" id="save">
+                  <p>SAVE</p>
+                </button>
               </div>
             </div>
             
