--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <h1>SEARCH</h1>
 
-      <form>
+      <form method="GET">
         <h2>Name: </h2>
         <input type="text" name="search"></input>
         <button class="btn">SEARCH</button>
